--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ html, body {
 }
 
 .file_box {
-  height: 100%;
-  padding-bottom: 25%;
+  height: 94%;
+  padding-bottom: 6%;
   padding-top: 5%;
   padding-right: 5%;
   padding-left:5%;
@@ -52,6 +52,14 @@ html, body {
   margin: 0px;
 }
 
+ul {
+    border-left: 1px dotted black;
+    list-style-type: none;
+    padding: 10px 20px;
+}
+
+.progress { display: none; }
+
 #content{
   width: 97%;
   margin-top: 1%;
@@ -65,6 +73,20 @@ html, body {
 }
 
 #filesTab{
+  background: #C0C0C0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  /*height: auto;*/
+  border-top: 1px solid #FFFFFF;
+  border-left: 1px solid #FFFFFF;
+  border-bottom: 1px solid #000000;
+  border-right: 1px solid #000000;
+  display:initial
+  z-index:20;
+}
+
+#picsTab{
   background: #C0C0C0;
   margin: auto;
   width: 100%;
